<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="display_what_the_user_entered">Display what the user entered</string>
    <string name="display">Display</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="he">He</string>
    <string name="she">She</string>
    <string name="they">They</string>
</resources>