<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/display"
            android:layout_weight="4"
            android:inputType="text"
            android:importantForAutofill="no" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/display_what_the_user_entered"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/heButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/he" />

        <RadioButton
            android:id="@+id/sheButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/she" />
        <RadioButton
            android:id="@+id/theyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/they" />
    </RadioGroup>

    <ToggleButton
        android:id="@+id/toggleButtonEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOff="@string/disabled"
        android:textOn="@string/enabled" />


</LinearLayout>
